--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>La Cambicha</title>
 </head>
 <body>
+    <!-- css -->
+    <link rel="stylesheet" href="/src/css/bootstrap.css" type="text/css" />
     <h1>Bienvenidos :)</h1>
+    <!-- js -->
+    <script type="text/javascript" src="/src/js/jquery.js"></script>
 </body>
 </html>
