--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>La Cambicha</title>
-</head>
-<body>
-    <!-- css -->
-    <link rel="stylesheet" href="/src/css/bootstrap.css" type="text/css" />
-    <h1>Bienvenidos :)</h1>
-    <!-- js -->
-    <script type="text/javascript" src="/src/js/jquery.js"></script>
-</body>
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>La cambicha</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<!-- CSS -->
+		<link rel="stylesheet" href="src/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
+		<link rel="stylesheet" href="src/css/lightbox.css" media="screen" title="no title" charset="utf-8">
+	</head>
+	<body class="container">
+
+		<div class="jumbotron">
+			<h1>La cambicha</h1>
+			<p>...</p>
+			<p><a class="btn btn-primary btn-lg" href="#" role="button">Click</a></p>
+		</div>
+
+		<!-- JS -->
+		<script src="src/js/jquery.min.js"></script>
+		<script src="src/js/bootstrap.js"></script>
+		<script src="src/js/lightbox.js"></script>
+	</body>
 </html>
